Fixed various spacing issues

--- a/app/assets/stylesheets/events.scss
+++ b/app/assets/stylesheets/events.scss
@@ -4,7 +4,7 @@
 
 .card-max-width {
   width: 15rem;
-  height: 17rem;
+  height: 18rem;
   float: left;
   flex-wrap: wrap;
   flex: initial;
